--- a/spa/index.html
+++ b/spa/index.html
@@ -7,7 +7,7 @@
     <body>
         <ul id='menu'>
             <li onclick='showTransactions()'>Przelewy</li>
-            <li onclick='showUsers()'>Członkowie</li>
+            <li onclick='showMembers()'>Członkowie</li>
             <li onclick='showBills()'>Rachunki</li>
             <li onclick='showDonations()'>Darowizny</li>
         </ul>
