add sass nad change colors

--- a/spa/index.html
+++ b/spa/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Cebulany Manager</title>
-        <link rel="stylesheet" type="text/css" href="main.css" />
+        <link rel="stylesheet" type="text/css" href="css/main.css" />
         <meta charset='utf-8' />
     </head>
     <body>
