add tables to donations etc

--- a/spa/index.html
+++ b/spa/index.html
@@ -10,6 +10,7 @@
             <li onclick='showMembers()'>Członkowie</li>
             <li onclick='showBills()'>Rachunki</li>
             <li onclick='showDonations()'>Darowizny</li>
+            <li onclick='showOthers()'>Inne płatności</li>
         </ul>
         <div id='main'></div>
         <script src="js/template.js"></script>
