add yarn and first vue controller

--- a/spa/index.html
+++ b/spa/index.html
@@ -1,21 +1,11 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>Cebulany Manager</title>
-        <link rel="stylesheet" type="text/css" href="css/main.css" />
-        <meta charset='utf-8' />
-    </head>
-    <body>
-        <ul id='menu'>
-            <li onclick='showTransactions()'>Przelewy</li>
-            <li onclick='showMembers()'>Członkowie</li>
-            <li onclick='showBills()'>Rachunki</li>
-            <li onclick='showDonations()'>Darowizny</li>
-            <li onclick='showOthers()'>Inne płatności</li>
-        </ul>
-        <div id='main'></div>
-        <script src="js/template.js"></script>
-        <script src="js/jade_runtime.js"></script>
-        <script src="js/code.js"></script>
-    </body>
-
+  <head>
+    <title>Cebulany Manager</title>
+    <meta charset='utf-8' />
+  </head>
+  <body>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  </body>
 </html>
